# nexelpy

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
MD/: tagBuilder.md
headerBuilder/: cacheControlHeaderBuilder.py  crossOriginEmbedderPolicyHeaderBuilder.py  crossOriginOpenerPolicyHeaderBuilder.py  cspHeaderBuilder.py  document.md  headerBuilder.py  originAgentClusterHeaderBuilder.py  referrerPolicyHeaderBuilder.py  xContentTypeOptionsHeaderBuilder.py
mediator/: _Global_nexelpy_var.py
mediator/registerations/: moduleInspector.py
mediator/request_proxy/: requestProxy.py
mediator/session_proxy/: session_middleware.py
nexelpy/: __init__.py
nexelpy/__not-use/: pathBuilder_old.py
nexelpy/__not-use/normTemps/: css_rewriter.py  html_rewriter.py  js_normalizer.py  manager.py
nexelpy/devControlPanel/nexel_venv/: home.py
nexelpy/headerBuilder/: clearSiteDataHeaderBuilder.py  hstsHeaderBuilder.py  permissionsPolicyHeaderBuilder.py  xFrameOptionsHeaderBuilder.py
nexelpy/mediator/: _Global_nexelpy_var.py  mainAppBuilder.py  reDirect.py  reloader.py  show_erorr_in_page.py  wraper_handler.py
nexelpy/view/: elementBuilder.py  elementBuilder.pyi  elementPyiMaker.py  formBuilder.py  importerExporter.py  nameGeneratorForForm.py  pageBuilder.py  parentResolverBase.py  pathBuilder.py  pluginBuilder.py  restApi.py  setCookieSession.py  tagBuilder.py  vapi.py  vintage.py
normTemps/: js_rewriter.py
view/: elementBuilder.py  pathBuilder.py  pluginBuilder.py  setCookieSession.py  vapi.py  vintage.py
view/nexcriptidia/: index.html
(+24 files in other folders)
