[project]
name = "nexelpy"
version = "1.13.28"
description = "comingsoon"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "NexeLinstance", email = "nexelinstance@gmail.com"},
]
dependencies = [
    "starlette>=0.27",
    "uvicorn>=0.23",
    "cryptography>=39.0",
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["nexelpy", "nexelpy.*"]
